--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
      learning technical sophistication, probably more. To
       join our movement, <a href="http://learnenough.com/email">sign
       up for our official email list</a> now.
+    </p>
+
+    <p>
+      <a href="http://twitter.com/learnenough" target="_blank"
+      style="text-decoration: none;">
+        <img src="images/small_twitter_logo.png">
+      </a>
+      You should follow Learn Enough on twitter
+      <a href="http://twitter.com/learnenough" target="_blank"here</a>
+    </p>
+
     <p>
       HTML was created by the original "web developer" computer scientist
       <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Tim_Berners-Lee
@@ -25,7 +36,9 @@
       of his cat, but it would be cool if it were
     </p>
 
-    <img src="images/kitten.jpg" alt="An adorable kitten">
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+      <img src="images/kitten.jpg" alt="An adorable kitten">
+    </a>
 
     <h2>Background</h2>
 
