--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,12 @@
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+
     <h1>Important HTML tags</h1>
 
   <a href="https://www.flickr.com/photos/jdhancock/3814523970">
@@ -62,6 +68,21 @@
       <td><code>td</code></td>
       <td>table data</td>
       <td>include a table data cell</td>
+    </tr>
+    <tr>
+      <td><code>ol</code></td>
+      <td>ordered list</td>
+      <td>create an ordered list</td>
+    </tr>
+    <tr>
+      <td><code>ul</code></td>
+      <td>unordered list</td>
+      <td>create an unordered list</td>
+    </tr>
+    <tr>
+      <td><code>li</code></td>
+      <td>list</td>
+      <td>indicates a list element</td>
     </tr>
     </table>
 
