--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration:none">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;text-decoration:none">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;text-decoration:none">Moby Dick</a>
     </div>
 
     <h1>Important HTML tags</h1>
@@ -84,6 +84,26 @@
       <td>list</td>
       <td>indicates a list element</td>
     </tr>
+    <tr>
+      <td><code>blockquote</code></td>
+      <td>blockquote</td>
+      <td>quote a section from another source</td>
+    </tr>
+    <tr>
+      <td><code>div</code></td>
+      <td>div</td>
+      <td>defines a division in an element</td>
+    </tr>
+    <tr>
+      <td><code>header</code></td>
+      <td>header</td>
+      <td>label the document header</td>
+    </tr>
+    <tr>
+      <td><code>br</code></td>
+      <td>break</td>
+      <td>enter the break</td>
+    </tr>
     </table>
 
     <h2>Inline Elements</h2>
@@ -134,7 +154,57 @@
         </td>
         <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
       </tr>
+      <tr>
+        <td><code>code</code></td>
+        <td>code</td>
+        <td>format as source code</td>
+        <td><code>&lt;code&gt;table&lt;code&gt;<code></td>
+        <td><code>table<code></td>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>span</td>
+        <td>define inline section in document</td>
+        <td><code>&lt;span&gt;Call me Ishmael&lt;span&gt;<code></td>
+        <td><span>Call me Ishmael<span></td>
+      </tr>
    </table>
+
+   <h2>Document Tags</h2>
+
+   <table>
+     <tr>
+       <th>Tag</th>
+       <th>Name</th>
+       <th>Purpose</th>
+     </tr>
+     <tr>
+       <td><code>html</code></td>
+       <td>html</td>
+       <td>tell the browser it's HTML Document</td>
+   </tr>
+   <tr>
+     <td><code>head</code></td>
+     <td>head</td>
+     <td>container for all head elements</td>
+   </tr>
+   <tr>
+     <td><code>body</code></td>
+     <td>body</td>
+     <td>defines the document body</td>
+   </tr>
+   <tr>
+     <td><code>title</code></td>
+     <td>title</td>
+     <td>defines the title of the document</td>
+   </tr>
+   <tr>
+     <td><code>meta</code></td>
+     <td>metadata</td>
+     <td>provides metadata about the HTML document</td>
+   </tr>
+   </table>
+
 
   </body>
 </html>
